--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "4ms-kicad-lib"]
 	path = 4ms-kicad-lib
 	url = https://github.com/4ms/4ms-kicad-lib.git
+[submodule "3d_models/Adafruit_CAD_Parts"]
+	path = 3d_models/Adafruit_CAD_Parts
+	url = https://github.com/adafruit/Adafruit_CAD_Parts.git
